--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 ),
                 React.createElement('nav', { style: styles.nav },
                     React.createElement('div', { style: { ...styles.navBrand, display: 'flex', alignItems: 'center', gap: '10px' } },
-                        React.createElement('img', { src: './atara-logo.svg', alt: 'Atara Studios Logo', style: { width: '32px', height: '32px' } }),
+                        React.createElement('img', { src: './public/logo.jpg', alt: 'Atara Studios Logo', style: { width: '32px', height: '32px' } }),
                         'ATARA STUDIOS'
                     ),
                     React.createElement('div', { style: styles.navLinks },
