--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
                     background: 'rgba(255, 255, 255, 0.85)',
                     zIndex: 1
                 },
-                nav: { position: 'fixed', top: 0, width: '100%', background: 'rgba(255, 255, 255, 0.95)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: '20px 40px', display: 'flex', justifyContent: 'space-between', alignItems: 'center', zIndex: 100, boxSizing: 'border-box' },
-                navBrand: { fontWeight: 600, fontSize: '18px', letterSpacing: '2px' },
-                navLinks: { display: 'flex', gap: '40px' },
-                navLink: { background: 'none', border: 'none', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
+                nav: { position: 'fixed', top: 0, width: '100%', background: 'rgba(255, 255, 255, 0.95)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: window.innerWidth <= 768 ? '15px 20px' : '20px 40px', display: 'flex', justifyContent: 'space-between', alignItems: 'center', zIndex: 100, boxSizing: 'border-box' },
+                navBrand: { fontWeight: 600, fontSize: window.innerWidth <= 768 ? '16px' : '18px', letterSpacing: '2px' },
+                navLinks: { display: 'flex', gap: window.innerWidth <= 768 ? '20px' : '40px', flexWrap: 'wrap' },
+                navLink: { background: 'none', border: 'none', fontSize: window.innerWidth <= 768 ? '12px' : '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
                 section: { minHeight: '100vh', paddingTop: '80px', position: 'relative', zIndex: 2 },
                 sectionHome: { paddingTop: 0, paddingBottom: '60px' },
-                container: { maxWidth: '1200px', margin: '0 auto', padding: '60px 40px', background: 'rgba(255, 255, 255, 0.9)', borderRadius: '20px', backdropFilter: 'blur(10px)' },
-                hero: { display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '80px', alignItems: 'center', minHeight: '100vh', padding: '0 40px', maxWidth: '1200px', margin: '0 auto' },
-                heroH1: { fontSize: '48px', fontWeight: 300, marginBottom: '20px', lineHeight: 1.2, margin: '0 0 20px 0' },
-                heroP: { fontSize: '18px', color: '#666', marginBottom: '40px', margin: '0 0 40px 0' },
-                ctaBtn: { background: '#000', color: '#fff', border: 'none', padding: '16px 32px', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit' },
+                container: { maxWidth: '1200px', margin: '0 auto', padding: window.innerWidth <= 768 ? '30px 20px' : '60px 40px', background: 'rgba(255, 255, 255, 0.9)', borderRadius: '20px', backdropFilter: 'blur(10px)' },
+                hero: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : '1fr 1fr', gap: window.innerWidth <= 768 ? '40px' : '80px', alignItems: 'center', minHeight: '100vh', padding: window.innerWidth <= 768 ? '0 20px' : '0 40px', maxWidth: '1200px', margin: '0 auto' },
+                heroH1: { fontSize: window.innerWidth <= 768 ? '32px' : '48px', fontWeight: 300, marginBottom: '20px', lineHeight: 1.2, margin: '0 0 20px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
+                heroP: { fontSize: window.innerWidth <= 768 ? '16px' : '18px', color: '#666', marginBottom: '40px', margin: '0 0 40px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
+                ctaBtn: { background: '#000', color: '#fff', border: 'none', padding: window.innerWidth <= 768 ? '14px 28px' : '16px 32px', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', width: window.innerWidth <= 768 ? '100%' : 'auto' },
                 imagePlaceholder: { aspectRatio: '4/5', background: '#f8f8f8', border: '1px solid #f0f0f0' },
-                grid: { display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))', gap: '40px', marginTop: '60px' },
-                classCard: { textAlign: 'center', borderRadius: '15px', overflow: 'hidden', background: 'rgba(255, 255, 255, 0.9)', backdropFilter: 'blur(10px)', border: '1px solid rgba(255, 255, 255, 0.2)' },
+                grid: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : 'repeat(auto-fit, minmax(280px, 1fr))', gap: window.innerWidth <= 768 ? '30px' : '40px', marginTop: window.innerWidth <= 768 ? '40px' : '60px' },
+                classCard: { textAlign: 'center', borderRadius: '15px', overflow: 'hidden', background: 'rgba(255, 255, 255, 0.9)', backdropFilter: 'blur(10px)', border: '1px solid rgba(255, 255, 255, 0.2)', padding: window.innerWidth <= 768 ? '20px' : '0' },
                 classImage: { aspectRatio: '4/3', background: '#f8f8f8', border: '1px solid #f0f0f0', marginBottom: '20px', borderRadius: '10px' },
-                h2: { fontSize: '32px', fontWeight: 300, textAlign: 'center', margin: 0 },
-                h3: { fontSize: '20px', fontWeight: 500, marginBottom: '10px', margin: '0 0 10px 0' },
+                h2: { fontSize: window.innerWidth <= 768 ? '24px' : '32px', fontWeight: 300, textAlign: 'center', margin: 0 },
+                h3: { fontSize: window.innerWidth <= 768 ? '18px' : '20px', fontWeight: 500, marginBottom: '10px', margin: '0 0 10px 0' },
                 cardP: { color: '#666', fontSize: '14px', margin: 0 }
             };
 
@@ -113,7 +113,7 @@
                                 React.createElement('h2', { style: { fontSize: '28px', fontWeight: 300, marginBottom: '20px', margin: '0 0 20px 0' } }, 'Why Choose Atara Studios?'),
                                 React.createElement('p', { style: { fontSize: '16px', color: '#666', maxWidth: '600px', margin: '0 auto' } }, 'Experience transformative wellness through our expertly designed programs that blend traditional techniques with modern innovation.')
                             ),
-                            React.createElement('div', { style: { display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(250px, 1fr))', gap: '40px' } },
+                            React.createElement('div', { style: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : 'repeat(auto-fit, minmax(250px, 1fr))', gap: window.innerWidth <= 768 ? '30px' : '40px' } },
                                 React.createElement('div', { style: { textAlign: 'center', padding: '30px 20px' } },
                                     React.createElement('svg', { width: 48, height: 48, viewBox: '0 0 24 24', fill: 'none', stroke: '#666', strokeWidth: 2, style: { marginBottom: '15px' } },
                                         React.createElement('path', { d: 'M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2' }),
@@ -148,7 +148,7 @@
                         ),
                         React.createElement('div', { style: { ...styles.container, marginTop: '40px', textAlign: 'center' } },
                             React.createElement('h2', { style: { fontSize: '24px', fontWeight: 300, marginBottom: '30px', margin: '0 0 30px 0' } }, 'Ready to Transform Your Body & Mind?'),
-                            React.createElement('div', { style: { display: 'flex', gap: '20px', justifyContent: 'center', flexWrap: 'wrap' } },
+                            React.createElement('div', { style: { display: 'flex', gap: '20px', justifyContent: 'center', flexWrap: 'wrap', flexDirection: window.innerWidth <= 768 ? 'column' : 'row' } },
                                 React.createElement('button', { 
                                     style: { ...styles.ctaBtn, padding: '18px 36px' },
                                     onClick: () => setActiveSection('classes')
@@ -315,7 +315,7 @@
                                     React.createElement('div', { style: { flex: 1, height: '1px', background: 'linear-gradient(to left, transparent, #ddd, transparent)' } })
                                 ),
                                 React.createElement('h4', { style: { fontSize: '18px', fontWeight: 500, marginBottom: '20px', margin: '0 0 20px 0' } }, 'Our Gallery'),
-                                React.createElement('div', { style: { display: 'grid', gridTemplateColumns: 'repeat(2, 1fr)', gap: '15px' } },
+                                React.createElement('div', { style: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : 'repeat(2, 1fr)', gap: '15px' } },
                                     React.createElement('img', { src: 'https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=400&h=250&fit=crop', alt: 'Atara Studio Interior', style: { width: '100%', height: '200px', objectFit: 'cover', borderRadius: '12px' } }),
                                     React.createElement('img', { src: 'https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?w=400&h=250&fit=crop', alt: 'Reformer Class in Session', style: { width: '100%', height: '200px', objectFit: 'cover', borderRadius: '12px' } }),
                                     React.createElement('img', { src: 'https://images.unsplash.com/photo-1588286840104-8957b019727f?w=400&h=250&fit=crop', alt: 'Yoga Session', style: { width: '100%', height: '200px', objectFit: 'cover', borderRadius: '12px' } }),
@@ -547,7 +547,7 @@
 
                     return React.createElement('div', { style: styles.container },
                         React.createElement('h2', { style: styles.h2 }, 'Contact & Book'),
-                        React.createElement('div', { style: { display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '80px', marginTop: '40px' } },
+                        React.createElement('div', { style: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : '1fr 1fr', gap: window.innerWidth <= 768 ? '40px' : '80px', marginTop: '40px' } },
                             React.createElement('div', null,
                                 React.createElement('h3', { style: { fontSize: '18px', fontWeight: 500, marginBottom: '15px', margin: '0 0 15px 0' } }, 'Visit Us'),
                                 React.createElement('p', { style: { color: '#666', marginBottom: '20px', margin: '0 0 20px 0' } }, 'One Stop Arcade, Karen', React.createElement('br'), '2nd Floor'),
