vertical slide fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     margin: 0, 
                     padding: 0,
                     position: 'relative',
-                    overflow: 'hidden'
+                    overflow: 'auto',
+                    overflowX: 'hidden'
                 },
                 backgroundSlider: {
                     position: 'fixed',
