--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     left: 0,
                     width: '100%',
                     height: '100%',
-                    background: 'rgba(255, 255, 255, 0.85)',
+                    background: window.innerWidth <= 768 ? 'rgba(255, 255, 255, 0.95)' : 'rgba(255, 255, 255, 0.85)',
                     zIndex: 1
                 },
                 nav: { position: 'fixed', top: 0, width: '100%', background: 'rgba(255, 255, 255, 0.95)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: window.innerWidth <= 768 ? '15px 20px' : '20px 40px', display: 'flex', justifyContent: 'space-between', alignItems: 'center', zIndex: 100, boxSizing: 'border-box' },
@@ -76,9 +76,9 @@
                 navLinks: { display: 'flex', gap: window.innerWidth <= 768 ? '20px' : '40px', flexWrap: 'wrap' },
                 navLink: { background: 'none', border: 'none', fontSize: window.innerWidth <= 768 ? '12px' : '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
                 section: { minHeight: window.innerWidth <= 768 ? 'auto' : '100vh', paddingTop: '80px', position: 'relative', zIndex: 2 },
-                sectionHome: { paddingTop: 0, paddingBottom: '60px' },
+                sectionHome: { paddingTop: window.innerWidth <= 768 ? '100px' : 0, paddingBottom: '60px' },
                 container: { maxWidth: '1200px', margin: '0 auto', padding: window.innerWidth <= 768 ? '30px 20px' : '60px 40px', background: 'rgba(255, 255, 255, 0.9)', borderRadius: '20px', backdropFilter: 'blur(10px)' },
-                hero: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : '1fr 1fr', gap: window.innerWidth <= 768 ? '40px' : '80px', alignItems: 'center', minHeight: window.innerWidth <= 768 ? 'auto' : '100vh', padding: window.innerWidth <= 768 ? '60px 20px' : '0 40px', maxWidth: '1200px', margin: '0 auto' },
+                hero: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : '1fr 1fr', gap: window.innerWidth <= 768 ? '30px' : '80px', alignItems: 'center', minHeight: window.innerWidth <= 768 ? 'auto' : '100vh', padding: window.innerWidth <= 768 ? '20px' : '0 40px', maxWidth: '1200px', margin: '0 auto' },
                 heroH1: { fontSize: window.innerWidth <= 768 ? '32px' : '48px', fontWeight: 300, marginBottom: '20px', lineHeight: 1.2, margin: '0 0 20px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
                 heroP: { fontSize: window.innerWidth <= 768 ? '16px' : '18px', color: '#666', marginBottom: '40px', margin: '0 0 40px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
                 ctaBtn: { background: '#000', color: '#fff', border: 'none', padding: window.innerWidth <= 768 ? '14px 28px' : '16px 32px', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', width: window.innerWidth <= 768 ? '100%' : 'auto' },
