--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             const [activeSection, setActiveSection] = useState('home');
             const [currentBgIndex, setCurrentBgIndex] = useState(0);
             const [expandedCard, setExpandedCard] = useState(null);
+            const [mobileMenuOpen, setMobileMenuOpen] = useState(false);
             
             const backgroundImages = [
                 'https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=1920&h=1080&fit=crop&crop=center',
@@ -73,8 +74,11 @@
                 },
                 nav: { position: 'fixed', top: 0, width: '100%', background: 'rgba(255, 255, 255, 0.95)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: window.innerWidth <= 768 ? '15px 20px' : '20px 40px', display: 'flex', justifyContent: 'space-between', alignItems: 'center', zIndex: 100, boxSizing: 'border-box' },
                 navBrand: { fontWeight: 600, fontSize: window.innerWidth <= 768 ? '16px' : '18px', letterSpacing: '2px' },
-                navLinks: { display: 'flex', gap: window.innerWidth <= 768 ? '20px' : '40px', flexWrap: 'wrap' },
-                navLink: { background: 'none', border: 'none', fontSize: window.innerWidth <= 768 ? '12px' : '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
+                navLinks: { display: window.innerWidth <= 768 ? 'none' : 'flex', gap: '40px', flexWrap: 'wrap' },
+                navLink: { background: 'none', border: 'none', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
+                hamburger: { display: window.innerWidth <= 768 ? 'block' : 'none', background: 'none', border: 'none', cursor: 'pointer', padding: '5px' },
+                mobileMenu: { position: 'fixed', top: '70px', left: 0, width: '100%', background: 'rgba(255, 255, 255, 0.98)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: '20px', display: mobileMenuOpen && window.innerWidth <= 768 ? 'flex' : 'none', flexDirection: 'column', gap: '15px', zIndex: 99 },
+                mobileNavLink: { background: 'none', border: 'none', fontSize: '16px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize', padding: '10px 0', textAlign: 'left' },
                 section: { minHeight: window.innerWidth <= 768 ? 'auto' : '100vh', paddingTop: '80px', position: 'relative', zIndex: 2 },
                 sectionHome: { paddingTop: window.innerWidth <= 768 ? '100px' : 0, paddingBottom: '60px' },
                 container: { maxWidth: '1200px', margin: '0 auto', padding: window.innerWidth <= 768 ? '30px 20px' : '60px 40px', background: 'rgba(255, 255, 255, 0.9)', borderRadius: '20px', backdropFilter: 'blur(10px)' },
@@ -609,6 +613,28 @@
                                 onClick: () => setActiveSection(section)
                             }, section.charAt(0).toUpperCase() + section.slice(1))
                         )
+                    ),
+                    React.createElement('button', {
+                        style: styles.hamburger,
+                        onClick: () => setMobileMenuOpen(!mobileMenuOpen)
+                    },
+                        React.createElement('svg', { width: 24, height: 24, viewBox: '0 0 24 24', fill: 'none', stroke: '#000', strokeWidth: 2 },
+                            React.createElement('line', { x1: 3, y1: 6, x2: 21, y2: 6 }),
+                            React.createElement('line', { x1: 3, y1: 12, x2: 21, y2: 12 }),
+                            React.createElement('line', { x1: 3, y1: 18, x2: 21, y2: 18 })
+                        )
+                    )
+                ),
+                React.createElement('div', { style: styles.mobileMenu },
+                    ['home', 'classes', 'about', 'pricing', 'contact'].map(section =>
+                        React.createElement('button', {
+                            key: section,
+                            style: { ...styles.mobileNavLink, color: activeSection === section ? '#000' : '#666' },
+                            onClick: () => {
+                                setActiveSection(section);
+                                setMobileMenuOpen(false);
+                            }
+                        }, section.charAt(0).toUpperCase() + section.slice(1))
                     )
                 ),
                 React.createElement('main', { 
