--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <style>
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes fadeInRight {
+            from { opacity: 0; transform: translateX(30px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+        @keyframes slideDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
@@ -73,7 +87,7 @@
                     zIndex: 1
                 },
                 nav: { position: 'fixed', top: 0, width: '100%', background: 'rgba(255, 255, 255, 0.95)', backdropFilter: 'blur(10px)', borderBottom: '1px solid rgba(240, 240, 240, 0.5)', padding: window.innerWidth <= 768 ? '15px 20px' : '20px 40px', display: 'flex', justifyContent: 'space-between', alignItems: 'center', zIndex: 100, boxSizing: 'border-box' },
-                navBrand: { fontWeight: 600, fontSize: window.innerWidth <= 768 ? '16px' : '18px', letterSpacing: '2px' },
+                navBrand: { fontWeight: 600, fontSize: window.innerWidth <= 768 ? '16px' : '18px', letterSpacing: '2px', animation: 'slideDown 0.8s ease-out' },
                 navLinks: { display: window.innerWidth <= 768 ? 'none' : 'flex', gap: '40px', flexWrap: 'wrap' },
                 navLink: { background: 'none', border: 'none', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', textTransform: 'capitalize' },
                 hamburger: { display: window.innerWidth <= 768 ? 'block' : 'none', background: 'none', border: 'none', cursor: 'pointer', padding: '5px' },
@@ -83,9 +97,9 @@
                 sectionHome: { paddingTop: window.innerWidth <= 768 ? '100px' : 0, paddingBottom: '60px' },
                 container: { maxWidth: '1200px', margin: '0 auto', padding: window.innerWidth <= 768 ? '30px 20px' : '60px 40px', background: 'rgba(255, 255, 255, 0.9)', borderRadius: '20px', backdropFilter: 'blur(10px)' },
                 hero: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : '1fr 1fr', gap: window.innerWidth <= 768 ? '30px' : '80px', alignItems: 'center', minHeight: window.innerWidth <= 768 ? 'auto' : '100vh', padding: window.innerWidth <= 768 ? '20px' : '0 40px', maxWidth: '1200px', margin: '0 auto' },
-                heroH1: { fontSize: window.innerWidth <= 768 ? '32px' : '48px', fontWeight: 300, marginBottom: '20px', lineHeight: 1.2, margin: '0 0 20px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
-                heroP: { fontSize: window.innerWidth <= 768 ? '16px' : '18px', color: '#666', marginBottom: '40px', margin: '0 0 40px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left' },
-                ctaBtn: { background: '#000', color: '#fff', border: 'none', padding: window.innerWidth <= 768 ? '14px 28px' : '16px 32px', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', width: window.innerWidth <= 768 ? '100%' : 'auto' },
+                heroH1: { fontSize: window.innerWidth <= 768 ? '32px' : '48px', fontWeight: 300, marginBottom: '20px', lineHeight: 1.2, margin: '0 0 20px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left', animation: 'fadeInUp 1s ease-out' },
+                heroP: { fontSize: window.innerWidth <= 768 ? '16px' : '18px', color: '#666', marginBottom: '40px', margin: '0 0 40px 0', textAlign: window.innerWidth <= 768 ? 'center' : 'left', animation: 'fadeInUp 1.2s ease-out' },
+                ctaBtn: { background: '#000', color: '#fff', border: 'none', padding: window.innerWidth <= 768 ? '14px 28px' : '16px 32px', fontSize: '14px', cursor: 'pointer', fontFamily: 'inherit', width: window.innerWidth <= 768 ? '100%' : 'auto', transition: 'all 0.3s ease', animation: 'fadeInUp 1.4s ease-out' },
                 imagePlaceholder: { aspectRatio: '4/5', background: '#f8f8f8', border: '1px solid #f0f0f0' },
                 grid: { display: 'grid', gridTemplateColumns: window.innerWidth <= 768 ? '1fr' : 'repeat(auto-fit, minmax(280px, 1fr))', gap: window.innerWidth <= 768 ? '30px' : '40px', marginTop: window.innerWidth <= 768 ? '40px' : '60px' },
                 classCard: { textAlign: 'center', borderRadius: '15px', overflow: 'hidden', background: 'rgba(255, 255, 255, 0.9)', backdropFilter: 'blur(10px)', border: '1px solid rgba(255, 255, 255, 0.2)', padding: window.innerWidth <= 768 ? '20px' : '0' },
@@ -104,13 +118,15 @@
                                 React.createElement('p', { style: styles.heroP }, 'Premium Pilates, Dance & Strength Training'),
                                 React.createElement('button', { 
                                     style: styles.ctaBtn, 
-                                    onClick: () => setActiveSection('contact') 
+                                    onClick: () => setActiveSection('contact'),
+                                    onMouseEnter: (e) => { e.target.style.transform = 'translateY(-2px)'; e.target.style.boxShadow = '0 5px 15px rgba(0,0,0,0.2)'; },
+                                    onMouseLeave: (e) => { e.target.style.transform = 'translateY(0)'; e.target.style.boxShadow = 'none'; }
                                 }, 'Book a Class')
                             ),
                             React.createElement('img', { 
                                 src: 'https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?w=500&h=600&fit=crop&crop=center',
                                 alt: 'Pilates Studio',
-                                style: { ...styles.imagePlaceholder, width: '100%', height: 'auto', objectFit: 'cover' }
+                                style: { ...styles.imagePlaceholder, width: '100%', height: 'auto', objectFit: 'cover', animation: 'fadeInRight 1s ease-out' }
                             })
                         ),
                         React.createElement('div', { style: { ...styles.container, marginTop: '60px' } },
