rename the logo file

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                 React.createElement('nav', { style: styles.nav },
                     React.createElement('div', { style: styles.navBrand },
                         React.createElement('img', { 
-                            src: 'f28872d8-37c6-4241-a6c9-adfd2b2f10bc.svg',
+                            src: 'logo.svg',
                             alt: 'Atara Studios Logo',
                             style: { 
                                 height: window.innerWidth <= 768 ? '28px' : '32px', 
